# Sample-cpp-game

./: CMakeLists.txt  LABGROUP.md  README.md  game.cpp
include/: game_algorithm.hpp  game_static_robots.hpp  init_robots.hpp  init_robots_with_grid.hpp
simple_control/: CMakeLists.txt  package.xml
simple_control/launch/: play.launch  record.launch  simple_control.launch
simple_control/src/: simple_control_node.cpp
